Trying to fix scroll overflow

--- a/style.css
+++ b/style.css
@@ -224,8 +224,10 @@ button:hover {
   opacity: 0.3;
 }
 
-.home .right-side .parallax-warpper {
-  overflow-y: hidden;
+.home .right-side .parallax-container {
+  position: relative;
+  overflow: hidden;
+  height: 100%;
 }
 
 .home .right-side .square-decor-1 {
